# arabic-translitterator-input

./: .clang-format  CMakeLists.txt  README.MD  meson.build
.github/workflows/: cmake.yml  meson.yml
data/corpuses/: .~lock.chat-gpt-sample-poem.txt#  chat-gpt-sample-poem.txt  quran-simple-plain.txt
src/: alif-key.cpp  main.cpp
src/AlifKeyCore/: ArabicModel.cpp  ArabicModel.hpp
src/ArabicModelCore/: ArabicModel.cpp  ArabicModel.hpp
src/includes/: fuzzySearch.cpp  fuzzySearch.hpp  jaroWinklerDistance.cpp  jaroWinklerDistance.hpp  levensteinDistance.cpp  levensteinDistance.hpp  transliterateNaively.cpp  transliterateNaively.hpp
